--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <input type="radio" name="time">Flamengo<br><br>
     
         Materias<br>
-        <input type="checkbox" name="conteudos" checked >Matematica<br>
+        <input type="checkbox" name="conteudos" checked >Sim<br>
         <input type="checkbox" name="conteudos" >Fisica<br>
         <input type="checkbox" name="conteudos" >Mat Aplicada<br>
         <input type="checkbox" name="conteudos" >Fisica na Atualidade,<br>,<br>
