--- a/Luis.html
+++ b/Luis.html
@@ -9,11 +9,25 @@
 </head>
 <body>
     
-    Texto cima
+    Estas sao minhas divs:<br>
+
     <div>
-        Minha div, divisao de 4
+      Primeira
     </div>
-    Texto Baixo
+
+    <div>
+        Segunda
+    </div>
+
+    <div>
+       Terceira
+    </div><br>
+
+    E a minha imagem:<br>
+
+    <img src="img/DlFkm5L.png" alt="Logo Criada"><br>
+
+
 
 </body>
 </html>
