--- a/Luis.html
+++ b/Luis.html
@@ -25,7 +25,7 @@
 
     E a minha imagem:<br>
 
-    <img src="img/DlFkm5L.png" alt="Logo Criada"><br>
+    <img src="Img/DlFkm5L.png" alt="Logo Criada"><br>
 
 
 
